--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click>=8.0.0
 # Install with: pip install "quran-ayah-lookup[api]"
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+python-dotenv==1.2.1
 
 # Development dependencies (install with: pip install -r requirements-dev.txt)
 # Or use: pip install -e ".[dev]" to install from pyproject.toml
