added requirement to .toml and requirements.txt and also modified another hardcoded reference in text_utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "rapidfuzz>=3.0.0",
     "numpy>=2.0.0",
     "click>=8.0.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
